# instant-style

./: .gitignore  README.md  app.py  attention_processor.py  exceptions.py  infer_flux_ipa_siglip.py  logging_config.py  metrics.py  model_manager.py  pipeline_flux_ipa.py  pyproject.toml  requirements.txt  transformer_flux.py  validation.py
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_attention.py  test_exceptions.py  test_metrics.py  test_validation.py
