[project]
name = "instant-style"
version = "0.1.0"
description = "InstantStyle: Style-Preserving Text-to-Image Generation"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "E731",   # do not assign a lambda expression
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["exceptions", "logging_config", "metrics", "model_manager", "validation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

